@@ -1,9 +1,9 @@
 library(testthat)
 library(nimble)
 
-# this will do all the tests in inst/tests (if any; as of version 0.1 there were none)
+# this will do all the tests in inst/tests
 test_package("nimble")
 
 # to only test some of the files in insts/tests, comment out the line above and uncomment as follows:
-# test_file(system.file("testFile.R", package = "nimble"))
+# test_package("nimble", "mcmc") # e.g., for test-mcmc.R
 
